[package]
name = "hello-esp32h2"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = "0.3.8"
esp-backtrace = { version = "0.13.0", features = [
    "esp32h2",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = [ "esp32h2" ] }
esp-println = { version = "0.10.0", features = ["esp32h2", "log", "defmt-espflash"] }
log = { version = "0.4.21" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
